YTDB-958: Record episode for Track 1 Step 7 (commitChanges AssertionError surface)